workspace-sf/force-app/main/default/objects/HerokuLogs__e/HerokuLogs__e.object-meta.xml
<CustomObject>
    <label>Heroku Log</label>
    <pluralLabel>Heroku Logs</pluralLabel>
</CustomObject>