workspace-sf/force-app/main/default/objects/HerokuLogs__e/fields/CodigoErro__c.field-meta.xml
<CustomField>
    <fullName>CodigoErro__c</fullName>
    <label>Codigo do erro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>