workspace-sf/force-app/main/default/objects/HerokuLogs__e/fields/CodigoIntegracao__c.field-meta.xml
<CustomField>
    <fullName>CodigoIntegracao__c</fullName>
    <label>Codigo de integração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>