workspace-sf/force-app/main/default/objects/HerokuLogs__e/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <label>Data</label>
    <type>DateTime</type>
</CustomField>