workspace-sf/force-app/main/default/objects/HerokuLogs__e/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <label>Descrição</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>