workspace-sf/force-app/main/default/objects/HerokuLogs__e/fields/IdRegistro__c.field-meta.xml
<CustomField>
    <fullName>IdRegistro__c</fullName>
    <label>Id do registro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>