workspace-sf/force-app/main/default/objects/HerokuLogs__e/fields/Objeto__c.field-meta.xml
<CustomField>
    <fullName>Objeto__c</fullName>
    <label>Objeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>